# cnbitkcybathlon

./: .gitignore  Makefile.am  configure.ac
extra/: Makefile.am  cnbi_cybathlon_dialog  cp_cybathlon_launcher  cp_cybathlon_launcher_all  cybathlon_control_template.xml  cybathlon_template.xml  ndf_cybathlon_eog.m  ndf_cybathlon_include.m  ndf_cybathlon_mi.m
gui/: Makefile.am  cybathlon_gui  install_gtkdialog.sh
src/: Makefile.am  cp_cybathlon_launcher  mi_cybathlon.cpp  mi_cybathlon1vs1.cpp  mi_cybathlon2.cpp  mi_cybathlon3.cpp  mi_cybathlon_controller.cpp  mi_cybathlon_utilities.hpp  mi_cybathlon_utilities_deprecated.hpp
