dist_bin_SCRIPTS = cnbi_cybathlon_dialog
dist_pkgdata_DATA = cnbi-logo.png

cnbicybathlondir = ${pkgdatadir}/cnbitkmat/matndf
cnbicybathlon_DATA = ndf_cybathlon_eog.m \
		     ndf_cybathlon_mi.m	\
		     ndf_cybathlon_include.m

cnbitkconfdir = $(sysconfdir)/cnbitk
dist_cnbitkconf_DATA = cybathlon_control_template.xml


