PACKAGE_NAME = @PACKAGE_NAME@
dist_bin_SCRIPTS = cnbi_cybathlon_dialog
dist_pkgdata_DATA = cnbi-logo.png

protocolmatdir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/ndf
protocolmat_DATA = ndf_cybathlon_eog.m \
		      ndf_cybathlon_mi.m	\
		      ndf_cybathlon_include.m

protocolxmldir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/xml
protocolxml_DATA = cybathlon_control_template.xml


