PACKAGE_NAME = @PACKAGE_NAME@

protocolmatdir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/ndf
protocolmat_DATA = ndf_cybathlon_eog.m \
		      ndf_cybathlon_mi.m	\
		      ndf_cybathlon_include.m

protocolxmldir = ${HOME}/.cnbitk/$(PACKAGE_NAME)/xml
protocolxml_DATA = cybathlon_template.xml

bin_SCRIPTS = cp_cybathlon_launcher \
	      cp_cybathlon_launcher_all

